@@ -23,6 +23,8 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Stream;
 
+import jakarta.ws.rs.core.Response;
+
 import org.keycloak.VCFormat;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.ClientPoliciesPoliciesResource;
@@ -43,6 +45,7 @@ import org.keycloak.crypto.Algorithm;
 import org.keycloak.crypto.KeyUse;
 import org.keycloak.crypto.KeyWrapper;
 import org.keycloak.events.EventType;
+import org.keycloak.json.RawJsonValue;
 import org.keycloak.keys.KeyProvider;
 import org.keycloak.models.Constants;
 import org.keycloak.models.IdentityProviderModel;
@@ -56,6 +59,7 @@ import org.keycloak.protocol.oid4vc.issuance.OID4VCAuthorizationDetailsParser;
 import org.keycloak.protocol.oid4vc.issuance.TimeProvider;
 import org.keycloak.protocol.oid4vc.issuance.mappers.OID4VCGeneratedIdMapper;
 import org.keycloak.protocol.oid4vc.issuance.mappers.OID4VCIssuedAtTimeClaimMapper;
+import org.keycloak.protocol.oid4vc.issuance.mappers.OID4VCMapper;
 import org.keycloak.protocol.oid4vc.model.CredentialScopeRepresentation;
 import org.keycloak.protocol.oid4vc.model.CredentialSubject;
 import org.keycloak.protocol.oid4vc.model.DisplayObject;
@@ -74,6 +78,7 @@ import org.keycloak.representations.idm.RealmEventsConfigRepresentation;
 import org.keycloak.representations.idm.RealmRepresentation;
 import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.representations.idm.oid4vc.UserVerifiableCredentialRepresentation;
 import org.keycloak.representations.userprofile.config.UPConfig;
 import org.keycloak.services.clientpolicy.executor.ConfidentialClientAcceptExecutorFactory;
 import org.keycloak.services.clientpolicy.executor.DPoPBindEnforcerExecutorFactory;
@@ -111,6 +116,7 @@ import org.keycloak.testframework.server.KeycloakServerConfigBuilder;
 import org.keycloak.testframework.server.KeycloakUrls;
 import org.keycloak.testframework.ui.annotations.InjectWebDriver;
 import org.keycloak.testframework.ui.webdriver.ManagedWebDriver;
+import org.keycloak.testframework.util.ApiUtil;
 import org.keycloak.testsuite.util.oauth.AccessTokenRequest;
 import org.keycloak.testsuite.util.oauth.AccessTokenResponse;
 import org.keycloak.testsuite.util.oauth.AuthorizationEndpointResponse;
@@ -124,6 +130,8 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 
 import static org.keycloak.OID4VCConstants.CLAIM_NAME_SUBJECT_ID;
+import static org.keycloak.OID4VCConstants.CRYPTOGRAPHIC_BINDING_METHOD_COSE_KEY;
+import static org.keycloak.OID4VCConstants.KeyAttestationResistanceLevels.MODERATE;
 import static org.keycloak.OID4VCConstants.OID4VCI_ENABLED_ATTRIBUTE_KEY;
 import static org.keycloak.OID4VCConstants.OPENID_CREDENTIAL;
 import static org.keycloak.authentication.authenticators.client.AttestationBasedClientAuthenticator.OAUTH_CLIENT_ATTESTATION_CONFIG_TRUST_IDPS;
@@ -131,9 +139,7 @@ import static org.keycloak.constants.OID4VCIConstants.CREDENTIAL_OFFER_CREATE;
 import static org.keycloak.constants.OID4VCIConstants.OID4VCI_ATTESTER_TRUST_IDPS_ATTR;
 import static org.keycloak.models.Constants.CREATE_DEFAULT_CLIENT_SCOPES;
 import static org.keycloak.models.oid4vci.CredentialScopeModel.CRYPTOGRAPHIC_BINDING_METHODS_DEFAULT;
-import static org.keycloak.models.oid4vci.CredentialScopeModel.VC_BINDING_REQUIRED;
 import static org.keycloak.models.oid4vci.CredentialScopeModel.VC_BINDING_REQUIRED_PROOF_TYPES;
-import static org.keycloak.models.oid4vci.CredentialScopeModel.VC_CRYPTOGRAPHIC_BINDING_METHODS;
 import static org.keycloak.models.oid4vci.CredentialScopeModel.VC_FORMAT_DEFAULT;
 import static org.keycloak.protocol.oidc.OIDCConfigAttributes.DPOP_BOUND_ACCESS_TOKENS;
 
@@ -160,6 +166,7 @@ public abstract class OID4VCIssuerTestBase {
 
     public static final String jwtTypeNaturalPersonScopeName = "oid4vc_natural_person_jwt";
     public static final String sdJwtTypeNaturalPersonScopeName = "oid4vc_natural_person_sd";
+    public static final String mdocTypeNaturalPersonScopeName = "oid4vc_natural_person_mdoc";
 
     public static final String sdJwtTypeCredentialScopeName = "sd-jwt-credential";
     public static final String sdJwtTypeCredentialConfigurationIdName = "sd-jwt-credential-config-id";
@@ -167,8 +174,14 @@ public abstract class OID4VCIssuerTestBase {
 
     public static final String jwtTypeCredentialScopeName = "jwt-credential";
     public static final String jwtTypeCredentialConfigurationIdName = "jwt-credential-config-id";
+    public static final String keyAttestationCredentialScopeName = "key-attestation-credential";
+    public static final String keyAttestationCredentialConfigurationIdName = "key-attestation-credential-config-id";
     public static final String minimalJwtTypeCredentialScopeName = "vc-with-minimal-config";
     public static final String minimalJwtTypeCredentialConfigurationIdName = "vc-with-minimal-config-id";
+
+    public static final String mdocTypeCredentialScopeName = "mdoc-credential";
+    public static final String mdocTypeCredentialConfigurationIdName = "mdoc-credential-config-id";
+    public static final String mdocTypeCredentialDocType = "org.iso.18013.5.1.mDL";
 
     public static final String CONTEXT_URL = "https://www.w3.org/2018/credentials/v1";
     public static final List<String> TEST_TYPES = List.of("VerifiableCredential");
@@ -220,9 +233,11 @@ public abstract class OID4VCIssuerTestBase {
 
     protected CredentialScopeRepresentation jwtTypeCredentialScope;
     protected CredentialScopeRepresentation sdJwtTypeCredentialScope;
+    protected CredentialScopeRepresentation keyAttestationCredentialScope;
     protected CredentialScopeRepresentation minimalJwtTypeCredentialScope;
     protected CredentialScopeRepresentation jwtNaturalPersonCredentialScope;
     protected CredentialScopeRepresentation sdJwtNaturalPersonCredentialScope;
+    protected CredentialScopeRepresentation mdocNaturalPersonCredentialScope;
 
     protected ClientRepresentation client;
     protected ClientRepresentation abcaClient;
@@ -246,6 +261,32 @@ public abstract class OID4VCIssuerTestBase {
             });
         });
 
+        // Mdoc scopes cannot be part of the initial realm representation because strict validation rejects them when
+        // the mdoc feature is disabled. Create and assign them only for test classes that explicitly enable mdoc.
+        boolean isMdocEnabled = runOnServer.fetch(session -> Profile.isFeatureEnabled(Profile.Feature.OID4VC_MDOC), Boolean.class);
+        if (isMdocEnabled) {
+            CredentialScopeRepresentation mdoc = createBaseMdocCredentialScope(realmResource);
+            CredentialScopeRepresentation mdocNaturalPerson = requireExistingCredentialScope(mdocTypeNaturalPersonScopeName);
+            for (String clientId : List.of(OID4VCI_CLIENT_ID, OID4VCI_ABCA_CLIENT_ID, OID4VCI_PUBLIC_CLIENT_ID)) {
+                ClientRepresentation clientRep = realmResource.clients().findByClientId(clientId).get(0);
+                for (CredentialScopeRepresentation scope : List.of(mdoc, mdocNaturalPerson)) {
+                    realmResource.clients().get(clientRep.getId()).addOptionalClientScope(scope.getId());
+                }
+            }
+            for (String username : List.of("john", "alice")) {
+                var credentialsResource = realmResource.users().get(requireExistingUser(username).getId()).verifiableCredentials();
+                for (String scopeName : List.of(mdocTypeCredentialScopeName, mdocTypeNaturalPersonScopeName)) {
+                    boolean alreadyPresent = credentialsResource.getCredentials().stream()
+                            .anyMatch(cred -> scopeName.equals(cred.getCredentialScopeName()));
+                    if (!alreadyPresent) {
+                        UserVerifiableCredentialRepresentation cred = new UserVerifiableCredentialRepresentation();
+                        cred.setCredentialScopeName(scopeName);
+                        credentialsResource.createCredential(cred);
+                    }
+                }
+            }
+        }
+
         AuthorizationDetailsParser.registerParser(OPENID_CREDENTIAL, new OID4VCAuthorizationDetailsParser());
 
         boolean isRestCredentialEnabled = runOnServer.fetch(session -> Profile.isFeatureEnabled(Profile.Feature.OID4VC_VCI_REST_CREDENTIAL_OFFER), Boolean.class);
@@ -258,6 +299,30 @@ public abstract class OID4VCIssuerTestBase {
         }
     }
 
+    private CredentialScopeRepresentation createBaseMdocCredentialScope(RealmResource realmResource) {
+        CredentialScopeRepresentation scope = new CredentialScopeRepresentation(mdocTypeCredentialScopeName)
+                .setIncludeInTokenScope(true)
+                .setExpiryInSeconds(CREDENTIALS_EXPIRATION_IN_SECONDS)
+                .setCredentialConfigurationId(mdocTypeCredentialConfigurationIdName)
+                .setCredentialIdentifier(mdocTypeCredentialScopeName)
+                .setFormat(VCFormat.MSO_MDOC)
+                .setVct(mdocTypeCredentialDocType)
+                .setSigningAlg("ES256")
+                .setBindingRequired(true)
+                .setCryptographicBindingMethods(List.of(CRYPTOGRAPHIC_BINDING_METHOD_COSE_KEY));
+        scope.setProtocolMappers(List.of(
+                ProtocolMapperUtils.getUserAttributeMapper("given_name", "firstName", "org.iso.18013.5.1"),
+                ProtocolMapperUtils.getUserAttributeMapper("family_name", "lastName", "org.iso.18013.5.1"),
+                ProtocolMapperUtils.getSubjectIdMapper("id", UserModel.USERNAME, "org.iso.18013.5.1")
+        ));
+        scope.getAttributes().put(VC_BINDING_REQUIRED_PROOF_TYPES, "jwt");
+
+        try (Response response = realmResource.clientScopes().create(scope)) {
+            String scopeId = ApiUtil.getCreatedId(response);
+            return new CredentialScopeRepresentation(realmResource.clientScopes().get(scopeId).toRepresentation());
+        }
+    }
+
     @BeforeEach
     void beforeEachBase() {
 
@@ -267,9 +332,12 @@ public abstract class OID4VCIssuerTestBase {
 
         jwtTypeCredentialScope = requireExistingCredentialScope(jwtTypeCredentialScopeName);
         sdJwtTypeCredentialScope = requireExistingCredentialScope(sdJwtTypeCredentialScopeName);
+        keyAttestationCredentialScope = requireExistingCredentialScope(keyAttestationCredentialScopeName);
         minimalJwtTypeCredentialScope = requireExistingCredentialScope(minimalJwtTypeCredentialScopeName);
         jwtNaturalPersonCredentialScope = requireExistingCredentialScope(jwtTypeNaturalPersonScopeName);
         sdJwtNaturalPersonCredentialScope = requireExistingCredentialScope(sdJwtTypeNaturalPersonScopeName);
+        // created automatically by the server, so it exists only when the mdoc feature is enabled
+        mdocNaturalPersonCredentialScope = getCredentialScope(mdocTypeNaturalPersonScopeName);
 
         oauth.client(client.getClientId(), client.getSecret());
         enableVerifiableCredentialEvents();
@@ -415,6 +483,14 @@ public abstract class OID4VCIssuerTestBase {
         )));
 
         return component;
+    }
+
+    protected void ensureEcSigningKeyProvider(String keyName, String ellipticCurve, String algorithm, int priority) {
+        boolean alreadyPresent = testRealm.admin().components().query(null, KeyProvider.class.getName()).stream()
+                .anyMatch(component -> keyName.equals(component.getName()));
+        if (!alreadyPresent) {
+            testRealm.admin().components().add(getEcKeyProvider(keyName, ellipticCurve, algorithm, priority)).close();
+        }
     }
 
     protected String getBearerToken(OAuthClient oauthClient) {
@@ -627,6 +703,24 @@ public abstract class OID4VCIssuerTestBase {
         }
     }
 
+    private static ComponentRepresentation getEcKeyProvider(String keyName, String ellipticCurve, String algorithm, int priority) {
+        ComponentRepresentation component = new ComponentRepresentation();
+        component.setProviderType(KeyProvider.class.getName());
+        component.setName(keyName);
+        component.setId(UUID.randomUUID().toString());
+        component.setProviderId("ecdsa-generated");
+        component.setConfig(new MultivaluedHashMap<>(Map.of(
+                "active", List.of("true"),
+                "priority", List.of(String.valueOf(priority)),
+                "enabled", List.of("true"),
+                "algorithm", List.of(algorithm),
+                "keyUse", List.of(KeyUse.SIG.name()),
+                "ecdsaEllipticCurveKey", List.of(ellipticCurve),
+                "ecGenerateCertificate", List.of("true")
+        )));
+        return component;
+    }
+
     private void enableVerifiableCredentialEvents() {
         RealmEventsConfigRepresentation realmEventsConfig = testRealm.admin().getRealmEventsConfig();
         List<String> enabledEventTypes = realmEventsConfig.getEnabledEventTypes();
@@ -685,7 +779,7 @@ public abstract class OID4VCIssuerTestBase {
 
             // Explicitly enable cryptographic binding + proof types for test credential configurations.
             // The issuer metadata only advertises binding/proofs when it is explicitly configured as required.
-            CredentialScopeRepresentation sdJwtScope = createCredentialScope(
+            CredentialScopeRepresentation sdJwtScope = configureBinding(createCredentialScope(
                     sdJwtTypeCredentialScopeName,
                     null,
                     sdJwtTypeCredentialConfigurationIdName,
@@ -694,15 +788,10 @@ public abstract class OID4VCIssuerTestBase {
                     VCFormat.SD_JWT_VC,
                     null,
                     null
-            );
-            Map<String, String> sdJwtAttrs = Optional.ofNullable(sdJwtScope.getAttributes()).orElseGet(HashMap::new);
-            sdJwtScope.setBindingRequired(true);
-            sdJwtAttrs.put(VC_BINDING_REQUIRED_PROOF_TYPES, "jwt");
-            sdJwtAttrs.put(VC_CRYPTOGRAPHIC_BINDING_METHODS, CRYPTOGRAPHIC_BINDING_METHODS_DEFAULT);
-            sdJwtScope.setAttributes(sdJwtAttrs);
+            ), "jwt");
             realm.clientScopes(sdJwtScope);
 
-            CredentialScopeRepresentation jwtVcScope = createCredentialScope(
+            CredentialScopeRepresentation jwtVcScope = configureBinding(createCredentialScope(
                     jwtTypeCredentialScopeName,
                     TEST_ISSUER_DID,
                     jwtTypeCredentialConfigurationIdName,
@@ -711,13 +800,20 @@ public abstract class OID4VCIssuerTestBase {
                     VCFormat.JWT_VC,
                     TEST_CREDENTIAL_MAPPERS_FILE,
                     null
-            );
-            Map<String, String> jwtVcAttrs = Optional.ofNullable(jwtVcScope.getAttributes()).orElseGet(HashMap::new);
-            jwtVcAttrs.put(VC_BINDING_REQUIRED, "true");
-            jwtVcAttrs.put(VC_BINDING_REQUIRED_PROOF_TYPES, "jwt,attestation");
-            jwtVcAttrs.put(VC_CRYPTOGRAPHIC_BINDING_METHODS, CRYPTOGRAPHIC_BINDING_METHODS_DEFAULT);
-            jwtVcScope.setAttributes(jwtVcAttrs);
+            ), "jwt,attestation");
             realm.clientScopes(jwtVcScope);
+
+            CredentialScopeRepresentation keyAttestationScope = configureBinding(createCredentialScope(
+                    keyAttestationCredentialScopeName,
+                    null,
+                    keyAttestationCredentialConfigurationIdName,
+                    keyAttestationCredentialScopeName,
+                    null,
+                    VCFormat.SD_JWT_VC,
+                    TEST_CREDENTIAL_MAPPERS_FILE,
+                    List.of(MODERATE)
+            ), "jwt,attestation");
+            realm.clientScopes(keyAttestationScope);
 
             realm.clientScopes(createCredentialScope(
                     minimalJwtTypeCredentialScopeName,
@@ -730,8 +826,8 @@ public abstract class OID4VCIssuerTestBase {
                     null
             ));
 
-            realm.users(createUser("John Doe", Map.of("did", "did:key:1234"), List.of(), Collections.emptyMap()));
-            realm.users(createUser("Alice Wonderland", Map.of("did", "did:key:5678"), List.of(), Map.of()));
+            realm.users(createUser("John Doe", Map.of(), List.of(), Collections.emptyMap()));
+            realm.users(createUser("Alice Wonderland", Map.of(), List.of(), Map.of()));
 
             // Add Client Policies
             //
@@ -755,7 +851,7 @@ public abstract class OID4VCIssuerTestBase {
 
             ClientPolicyExecutorRepresentation executor = new ClientPolicyExecutorRepresentation();
             executor.setExecutorProviderId(CredentialClientPolicyExecutorFactory.PROVIDER_ID);
-            executor.setConfiguration(JsonNodeFactory.instance.objectNode());
+            executor.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()));
             profile.setExecutors(List.of(executor));
 
             return profile;
@@ -771,7 +867,7 @@ public abstract class OID4VCIssuerTestBase {
             //
             ClientPolicyExecutorRepresentation confidentialClientEnforcer = new ClientPolicyExecutorRepresentation();
             confidentialClientEnforcer.setExecutorProviderId(ConfidentialClientAcceptExecutorFactory.PROVIDER_ID);
-            confidentialClientEnforcer.setConfiguration(JsonNodeFactory.instance.objectNode());
+            confidentialClientEnforcer.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()));
 
             // secure-client-authenticator
             //
@@ -783,21 +879,21 @@ public abstract class OID4VCIssuerTestBase {
                     .add("client-x509")
                     .add("attestation-based"); // added for Attestation-Based Client Authentication (ABCA)
             secureClientAuthenticatorConfig.put("default-client-authenticator", "attestation-based");
-            secureClientAuthenticator.setConfiguration(secureClientAuthenticatorConfig);
+            secureClientAuthenticator.setConfiguration(RawJsonValue.of(secureClientAuthenticatorConfig));
 
             // secure-client-uris
             //
             ClientPolicyExecutorRepresentation secureClientUris = new ClientPolicyExecutorRepresentation();
             secureClientUris.setExecutorProviderId(SecureClientUrisExecutorFactory.PROVIDER_ID);
-            secureClientUris.setConfiguration(JsonNodeFactory.instance.objectNode()
-                    .put("allow-http-on-localhost", true));
+            secureClientUris.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
+                    .put("allow-http-on-localhost", true)));
 
             // secure-signature-algorithm
             //
             ClientPolicyExecutorRepresentation secureSigningAlgorithm = new ClientPolicyExecutorRepresentation();
             secureSigningAlgorithm.setExecutorProviderId(SecureSigningAlgorithmExecutorFactory.PROVIDER_ID);
-            secureSigningAlgorithm.setConfiguration(JsonNodeFactory.instance.objectNode()
-                    .put("default-algorithm", "PS256"));
+            secureSigningAlgorithm.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
+                    .put("default-algorithm", "PS256")));
 
             // consent-required (not used)
             //
@@ -806,50 +902,50 @@ public abstract class OID4VCIssuerTestBase {
             //
             ClientPolicyExecutorRepresentation secureSigningAlgorithmForSignedJwt = new ClientPolicyExecutorRepresentation();
             secureSigningAlgorithmForSignedJwt.setExecutorProviderId(SecureSigningAlgorithmForSignedJwtExecutorFactory.PROVIDER_ID);
-            secureSigningAlgorithmForSignedJwt.setConfiguration(JsonNodeFactory.instance.objectNode()
-                    .put("require-client-assertion", false));
+            secureSigningAlgorithmForSignedJwt.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
+                    .put("require-client-assertion", false)));
 
             // full-scope-disabled
             //
             ClientPolicyExecutorRepresentation fullScopeDisabled = new ClientPolicyExecutorRepresentation();
             fullScopeDisabled.setExecutorProviderId(FullScopeDisabledExecutorFactory.PROVIDER_ID);
-            fullScopeDisabled.setConfiguration(JsonNodeFactory.instance.objectNode()
-                    .put("auto-configure", false));
+            fullScopeDisabled.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
+                    .put("auto-configure", false)));
 
             // reject-implicit-grant
             //
             ClientPolicyExecutorRepresentation rejectImplicitGrant = new ClientPolicyExecutorRepresentation();
             rejectImplicitGrant.setExecutorProviderId(RejectImplicitGrantExecutorFactory.PROVIDER_ID);
-            rejectImplicitGrant.setConfiguration(JsonNodeFactory.instance.objectNode()
-                    .put("auto-configure", false));
+            rejectImplicitGrant.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
+                    .put("auto-configure", false)));
 
             // pkce-enforcer
             //
             ClientPolicyExecutorRepresentation pkceEnforcer = new ClientPolicyExecutorRepresentation();
             pkceEnforcer.setExecutorProviderId(PKCEEnforcerExecutorFactory.PROVIDER_ID);
-            pkceEnforcer.setConfiguration(JsonNodeFactory.instance.objectNode()
-                    .put("auto-configure", false));
+            pkceEnforcer.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
+                    .put("auto-configure", false)));
 
             // secure-client-authentication-assertion
             //
             ClientPolicyExecutorRepresentation secureClientAuthenticationAssertion = new ClientPolicyExecutorRepresentation();
             secureClientAuthenticationAssertion.setExecutorProviderId(SecureClientAuthenticationAssertionExecutorFactory.PROVIDER_ID);
-            secureClientAuthenticationAssertion.setConfiguration(JsonNodeFactory.instance.objectNode());
+            secureClientAuthenticationAssertion.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()));
 
             // secure-par-content
             //
             ClientPolicyExecutorRepresentation secureParContents = new ClientPolicyExecutorRepresentation();
             secureParContents.setExecutorProviderId(SecureParContentsExecutorFactory.PROVIDER_ID);
-            secureParContents.setConfiguration(JsonNodeFactory.instance.objectNode());
+            secureParContents.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()));
 
             // dpop-bind-enforcer
             //
             ClientPolicyExecutorRepresentation dpopBindEnforcerExecutor = new ClientPolicyExecutorRepresentation();
             dpopBindEnforcerExecutor.setExecutorProviderId(DPoPBindEnforcerExecutorFactory.PROVIDER_ID);
-            dpopBindEnforcerExecutor.setConfiguration(JsonNodeFactory.instance.objectNode()
+            dpopBindEnforcerExecutor.setConfiguration(RawJsonValue.of(JsonNodeFactory.instance.objectNode()
                     .put("auto-configure", false)
                     .put("enforce-authorization-code-binding-to-dpop", false)
-                    .put("allow-only-refresh-token-binding", false));
+                    .put("allow-only-refresh-token-binding", false)));
 
             profile.setExecutors(List.of(
                     confidentialClientEnforcer,
@@ -882,7 +978,7 @@ public abstract class OID4VCIssuerTestBase {
                     "key", OID4VCI_ENABLED_ATTRIBUTE_KEY,
                     "value", String.valueOf(true)
             ))));
-            condition.setConfiguration(config);
+            condition.setConfiguration(RawJsonValue.of(config));
 
             policy.setConditions(List.of(condition));
             policy.setProfiles(List.of(profile.getName()));
@@ -904,7 +1000,7 @@ public abstract class OID4VCIssuerTestBase {
                     "key", OID4VCI_ENABLED_ATTRIBUTE_KEY,
                     "value", String.valueOf(true)
             ))));
-            condition.setConfiguration(config);
+            condition.setConfiguration(RawJsonValue.of(config));
 
             policy.setConditions(List.of(condition));
             policy.setProfiles(List.of(profile.getName()));
@@ -956,6 +1052,14 @@ public abstract class OID4VCIssuerTestBase {
             }
 
             return cs;
+        }
+
+        private CredentialScopeRepresentation configureBinding(CredentialScopeRepresentation scope,
+                                                               String proofTypes) {
+            scope.setBindingRequired(true);
+            scope.setCryptographicBindingMethods(CRYPTOGRAPHIC_BINDING_METHODS_DEFAULT);
+            scope.getAttributes().put(VC_BINDING_REQUIRED_PROOF_TYPES, proofTypes);
+            return scope;
         }
 
         private UserRepresentation createUser(
@@ -1117,7 +1221,7 @@ public abstract class OID4VCIssuerTestBase {
 
         static List<ProtocolMapperRepresentation> getProtocolMappers(String scopeName) {
             return List.of(
-                    getSubjectIdMapper(CLAIM_NAME_SUBJECT_ID, UserModel.DID),
+                    getSubjectIdMapper(CLAIM_NAME_SUBJECT_ID, UserModel.USERNAME),
                     getUserAttributeMapper("email", "email"),
                     getUserAttributeMapper("firstName", "firstName"),
                     getUserAttributeMapper("lastName", "lastName"),
@@ -1154,6 +1258,14 @@ public abstract class OID4VCIssuerTestBase {
             return protocolMapperRepresentation;
         }
 
+        static ProtocolMapperRepresentation getSubjectIdMapper(String subjectProperty, String attributeName, String mdocNamespace) {
+            ProtocolMapperRepresentation protocolMapperRepresentation = getSubjectIdMapper(subjectProperty, attributeName);
+            Map<String, String> config = new HashMap<>(protocolMapperRepresentation.getConfig());
+            config.put(OID4VCMapper.MDOC_NAMESPACE, mdocNamespace);
+            protocolMapperRepresentation.setConfig(config);
+            return protocolMapperRepresentation;
+        }
+
         static ProtocolMapperRepresentation getUserAttributeMapper(String subjectProperty, String attributeName) {
             ProtocolMapperRepresentation protocolMapperRepresentation = new ProtocolMapperRepresentation();
             protocolMapperRepresentation.setName(attributeName + "-mapper");
@@ -1165,6 +1277,14 @@ public abstract class OID4VCIssuerTestBase {
                             "claim.name", subjectProperty,
                             "userAttribute", attributeName)
             );
+            return protocolMapperRepresentation;
+        }
+
+        static ProtocolMapperRepresentation getUserAttributeMapper(String subjectProperty, String attributeName, String mdocNamespace) {
+            ProtocolMapperRepresentation protocolMapperRepresentation = getUserAttributeMapper(subjectProperty, attributeName);
+            Map<String, String> config = new HashMap<>(protocolMapperRepresentation.getConfig());
+            config.put(OID4VCMapper.MDOC_NAMESPACE, mdocNamespace);
+            protocolMapperRepresentation.setConfig(config);
             return protocolMapperRepresentation;
         }
 
